add client File

--- a/projet/Makefile
+++ b/projet/Makefile
@@ -1,18 +1,35 @@
-JFLAGS = -sourcepath src -cp build -d build -implicit:none
-SRC = src/fr/iutfbleau/projet/
-BLD = build/fr/iutfbleau/projet/
+JFLAGS_CLIENT = -sourcepath SRC_CLIENT -cp BLD_CLIENT -d BLD_CLIENT -implicit:none
+JFLAGS_MESSAGE = -sourcepath SRC_CLIENT -cp BLD_CLIENT -d BLD_CLIENT -implicit:none
+
+
+SRC_CLIENT = src/fr/utc/ai16/client/
+BLD_CLIENT = build/fr/utc/ai16/client/
+
+SRC_MESSAGE = src/fr/utc/ai16/
+BLD_MESSAGE = build/fr/utc/ai16/
+
+
 JC = javac
 
-$(BLD)Main.class: $(SRC)Main.java $(BLD)Source.class $(BLD)Question.class $(BLD)Choix.class  
+#CLIENT
+$(BLD_CLIENT)MessageReceptor.class: $(SRC_CLIENT)MessageReceptor.java $(BLD_CLIENT)Message.class $(BLD_CLIENT)MessageType.class 
 	$(JC) $(JFLAGS) $<
 
-$(BLD)Source.class: $(SRC)Source.java $(BLD)Question.class $(BLD)Choix.class  
+$(BLD_CLIENT)MessageSender.class: $(SRC_CLIENT)MessageSender.java $(BLD_CLIENT)Message.class $(BLD_CLIENT)MessageType.class  
 	$(JC) $(JFLAGS) $<
 
-$(BLD)Question.class: $(SRC)Question.java $(BLD)Choix.class
+$(BLD_CLIENT)Main.class: $(SRC_CLIENT)Main.java $(BLD_CLIENT)MessageReceptor.class $(BLD_CLIENT)MessageSender.class
 	$(JC) $(JFLAGS) $<
 
 $(BLD)Choix.class: $(SRC)Choix.java
+	$(JC) $(JFLAGS) $<
+
+
+#MESSAGE
+$(BLD_CLIENT)MessageReceptor.class: $(SRC_CLIENT)MessageReceptor.java $(BLD_CLIENT)Message.class $(BLD_CLIENT)MessageType.class 
+	$(JC) $(JFLAGS) $<
+
+$(BLD_CLIENT)MessageSender.class: $(SRC_CLIENT)MessageSender.java $(BLD_CLIENT)Message.class $(BLD_CLIENT)MessageType.class  
 	$(JC) $(JFLAGS) $<
 
 clean:
